--- a/src/app/assets/scss/listSelectItem.scss
+++ b/src/app/assets/scss/listSelectItem.scss
@@ -1,5 +1,5 @@
 .list-select-item {
-  @apply relative inline-block cursor-pointer rounded-[12px] border-[1px] border-[#262626] bg-[#1A1A1A] px-[18px] py-[7px] text-[14px] font-medium text-[#7D7D7D] transition-all duration-300;
+  @apply relative inline-block cursor-pointer rounded-[12px] border-[1px] border-gray bg-[#1A1A1A] px-[18px] py-[7px] text-[14px] font-medium text-[#7D7D7D] transition-all duration-300;
 
   &::before {
     content: '';
@@ -17,7 +17,7 @@
   }
 
   &.is-selected {
-    @apply bg-[#2D2D2D] text-[#C7C7C7] border-transparent;
+    @apply border-transparent bg-[#2D2D2D] text-[#C7C7C7];
 
     &::before {
       opacity: 1;
