--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -8,8 +8,9 @@
 @import './assets/scss/btn';
 
 body {
+  @apply bg-black;
+
   color: #fff;
-  background: #0f0f0f;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -webkit-text-size-adjust: none;
@@ -17,7 +18,7 @@ body {
 
 .header {
   &::before {
-    @apply bg-[#0f0f0f]/90;
+    @apply bg-black/90;
 
     position: absolute;
     top: 0;
